--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-7696663-7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-7696663-7');
+  </script>
+
 </head>
 
 <body id="page-top">
@@ -44,13 +54,13 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
       </ul>
     </div>
@@ -66,7 +76,6 @@
         <div class="subheading mb-5">iOS and Backend Developer ·
           <a href="mailto:alexmorral@gmail.com">alexmorral@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am an iOS developer that has published some apps on the App Store. I also have experience working on the backend building APIs for these apps and developing full websites using Ruby on Rails.</p>
         <div class="social-icons">
           <a href="//www.linkedin.com/in/alexmorral/">
             <i class="fab fa-linkedin-in"></i>
@@ -89,9 +98,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">iOS Engineer</h3>
+            <div class="subheading mb-3">Sage</div>
+            <p>I joined the Sage Accouting team to work on their <a href="https://apps.apple.com/app/sage-accounting/id1341612411">Accounting App</a>. My day to day 
+              is developing new features, fixing bugs but also working on refactors and modernizing the app so it uses more recent frameworks: e.g. Combine and SwiftUI.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">May 2021 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Cofounder and Fullstack Developer</h3>
             <div class="subheading mb-3">Bocadil Infinite</div>
-            <p>With 2 friends from Sfy I cofounded this company. We are a software development company specialized in mobile and web development that makes software for clients but also for ourselves. Some of our successful projects are <a href="//amigoinvisible22.com">Amigo Invisible 22</a>, <a href="//stickery.app">Stickery</a>, <a href="//alma100.com">Alma100</a>, <a href="//apps.apple.com/app/recorda-diario-y-recordatorio/id1509030899">Recorda</a>.
+            <p>With 2 friends from Sfy I cofounded this company. We are a software development company specialized in mobile and web development 
+              that makes software for clients but also for ourselves. Some of our successful projects are <a href="https://amigoinvisible22.com">Amigo Invisible 22</a>, 
+              <a href="https://stickery.app">Stickery</a> (sold), <a href="https://alma100.com">Alma100</a>, <a href="https://apps.apple.com/app/recorda-diario-y-recordatorio/id1509030899">Recorda</a>.
             I mainly do iOS, backend and system administration.</p>
           </div>
           <div class="resume-date text-md-right">
@@ -103,7 +126,8 @@
           <div class="resume-content">
             <h3 class="mb-0">iOS Developer</h3>
             <div class="subheading mb-3">Soft For You</div>
-            <p>I joined the Sfy iOS team to help them work on their projects. I worked in some projects for big name clients such as Caixabank and Banc Sabadell. The time there was great because I had the oportunity to learn a lot on some iOS SDKs, e.g. CoreData, CoreBluetooth, CoreLocation... </p>
+            <p>I joined the Sfy iOS team to help them work on their projects. I worked in some projects for big name clients such as Caixabank and Banc Sabadell. 
+              The time there was great because I had the oportunity to learn a lot on some iOS SDKs, e.g. CoreData, CoreBluetooth, CoreLocation... </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2015 - November 2016</span>
@@ -114,7 +138,8 @@
           <div class="resume-content">
             <h3 class="mb-0">iOS Developer</h3>
             <div class="subheading mb-3">Formentera Apartments</div>
-            <p>Formentera Apartments was a company that was renting flats, apartments and houses on the Formentera Island. I helped develop the website in PHP and also made the iOS app (not available anymore). The main purpose of the app was to display all the properties and their details and be able to send a request on these properties.</p>
+            <p>Formentera Apartments was a company that was renting flats, apartments and houses on the Formentera Island. I helped develop the website in PHP and also made the 
+              iOS app (not available anymore). The main purpose of the app was to display all the properties and their details and be able to send a request on these properties.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">October 2012 - December 2012</span>
@@ -123,6 +148,63 @@
 
       </div>
 
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
+      <div class="w-100">
+        <h2 class="mb-5">Portfolio</h2>
+
+        <h3 class="mb-2">Personal</h3>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Dreamy - Your dream journal</h3>
+            <h4><a href="https://dreamy.app">dreamy.app</a></h4>
+            <p>Dreamy is a dream diary app to keep all your dreams organized. It lets you write down or record your dreams, and attach some important information to them.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <img class="appstore-icon" src="https://is3-ssl.mzstatic.com/image/thumb/Purple125/v4/78/c8/9b/78c89ba1-5ee6-cccb-99be-22a3747dfdc0/AppIcon-0-1x_U007emarketing-0-10-0-85-220.png/230x0w.png" />
+          </div>
+        </div>
+
+        <h3 class="mb-2">Company</h3>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Amigo Invisible 22 - Gift exchange</h3>
+            <h4><a href="https://amigoinvisible22.com">amigoinvisible22.com</a></h4>
+            <p>Secret Santa 22 is an online gift exchange generator app that lets you draw names fast and free.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <img class="appstore-icon" src="https://is3-ssl.mzstatic.com/image/thumb/Purple114/v4/9a/1e/ad/9a1ead8e-6ff0-957b-13d3-b247502e06a1/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/230x0w.png" />
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Stickery - the sticker maker <span class="subheading text-secondary">(SOLD)</span></h3>
+            <h4><a href="https://stickery.app">stickery.app</a></h4>
+            <p>Stickery is a sticker maker app that lets you create and customize your own stickers. You are able to share the stickers you created with your friends. You can also download really cool stickers from artists.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <img class="appstore-icon" src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/39/9e/f8/399ef814-d7eb-8ee5-670b-b97a148603c9/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/230x0w.png" />
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Recorda - Journal And Reminders</h3>
+            <h4><a href="https://recorda.app">recorda.app</a></h4>
+            <p>Recorda reinvents and merges your personal diary, your to-do list, your notes and reminders in a single app. It allows you to quickly, easily and intuitively write down what comes to your mind.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <img style="border-color: #ccc; border-width: 1px; border-style: solid;" class="appstore-icon" src="https://is5-ssl.mzstatic.com/image/thumb/Purple123/v4/4d/64/95/4d649503-22c7-2f6f-fd74-6cb4f68419c8/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/230x0w.webp" />
+          </div>
+        </div>
+
+      </div>
     </section>
 
     <hr class="m-0">
@@ -201,15 +283,6 @@
             <i class="fa-li fa fa-check"></i>
             System administration (Linux, DB, etc)</li>
         </ul>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Even that my hobby has become my job, I still develop as a hobby. I like learning new things and testing new technologies. Apart from that, I try to play padel or tennis once a week with my friends, go snowboarding on winter and ride my motorcycle on sunny and warm days.</p>
       </div>
     </section>
 
