Update Sage description

--- a/index.html
+++ b/index.html
@@ -109,8 +109,12 @@
           <div class="resume-content">
             <h3 class="mb-0">iOS Engineer</h3>
             <div class="subheading mb-3">Sage</div>
-            <p>I joined the Sage Accouting team to work on their <a href="https://apps.apple.com/app/sage-accounting/id1341612411">Accounting App</a>. My day to day 
-              is developing new features, fixing bugs but also working on refactors and modernizing the app so it uses more recent frameworks: e.g. Combine and SwiftUI.</p>
+            <p>
+              - Maintenance and bug fixing of the <a href="https://apps.apple.com/app/sage-accounting/id1341612411">Sage Accounting</a> and ongoing development of <a href="https://apps.apple.com/gb/app/id1641307408">Sage Individual</a> leveraging latest Apple frameworks such as SwiftUI, Combine, async-await.
+              - Design the architecture of Sage Individual to be modular and protocol oriented. UI, Networking and API Services modules on their own Swift Package.
+              - Participate in interviews of new team members, evaluating the take-home projects and being in charge of the iOS technical questions.
+              - Security Champion for the team, being the person responsible of managing the communication and results of a penetration tests and SAST/DAST findings.
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2021 - Present</span>
@@ -277,7 +281,7 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            iOS development Swift & Objective-C</li>
+            iOS development Swift/SwiftUI & Objective-C</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Backend development Ruby On Rails and Phoenix Framework</li>
