Update Sage list

--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
             <h3 class="mb-0">iOS Engineer</h3>
             <div class="subheading mb-3">Sage</div>
             <p>
-              - Maintenance and bug fixing of the <a href="https://apps.apple.com/app/sage-accounting/id1341612411">Sage Accounting</a> and ongoing development of <a href="https://apps.apple.com/gb/app/id1641307408">Sage Individual</a> leveraging latest Apple frameworks such as SwiftUI, Combine, async-await.
-              - Design the architecture of Sage Individual to be modular and protocol oriented. UI, Networking and API Services modules on their own Swift Package.
-              - Participate in interviews of new team members, evaluating the take-home projects and being in charge of the iOS technical questions.
-              - Security Champion for the team, being the person responsible of managing the communication and results of a penetration tests and SAST/DAST findings.
+              <ul>
+              <li>Maintenance and bug fixing of the <a href="https://apps.apple.com/app/sage-accounting/id1341612411">Sage Accounting</a> and ongoing development of <a href="https://apps.apple.com/gb/app/id1641307408">Sage Individual</a> leveraging latest Apple frameworks such as SwiftUI, Combine, async-await.</li>
+              <li>Design the architecture of Sage Individual to be modular and protocol oriented. UI, Networking and API Services modules on their own Swift Package.</li>
+              <li>Participate in interviews of new team members, evaluating the take-home projects and being in charge of the iOS technical questions.</li>
+              <li>Security Champion for the team, being the person responsible of managing the communication and results of a penetration tests and SAST/DAST findings.</li>
+              </ul>
             </p>
           </div>
           <div class="resume-date text-md-right">
