--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="subheading mb-3">Sage</div>
             <p>
               <ul>
-              <li>Maintenance and bug fixing of the <a href="https://apps.apple.com/app/sage-accounting/id1341612411">Sage Accounting</a> and ongoing development of <a href="https://apps.apple.com/gb/app/id1641307408">Sage Individual</a> leveraging latest Apple frameworks such as SwiftUI, Combine, async-await.</li>
+              <li>Developing new features for <a href="https://apps.apple.com/gb/app/id1641307408" rel=”nofollow”>Sage Individual</a> leveraging latest Apple frameworks such as SwiftUI, Combine, async-await. Maintenance and bug fixing of the legacy <a href="https://apps.apple.com/app/sage-accounting/id1341612411" rel=”nofollow”>Sage Accounting</a> app.</li>
               <li>Design the architecture of Sage Individual to be modular and protocol oriented. UI, Networking and API Services modules on their own Swift Package.</li>
               <li>Participate in interviews of new team members, evaluating the take-home projects and being in charge of the iOS technical questions.</li>
               <li>Security Champion for the team, being the person responsible of managing the communication and results of a penetration tests and SAST/DAST findings.</li>
@@ -125,12 +125,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cofounder and Fullstack Developer</h3>
+            <h3 class="mb-0">Cofounder and Sotware Engineer</h3>
             <div class="subheading mb-3">Bocadil Infinite</div>
-            <p>With 2 friends from Sfy I cofounded this company. We are a software development company specialized in mobile and web development 
-              that makes software for clients but also for ourselves. Some of our successful projects are <a href="https://amigoinvisible22.com">Amigo Invisible 22</a>, 
-              <a href="https://stickery.app">Stickery</a> (sold), <a href="https://alma100.com">Alma100</a>, <a href="https://apps.apple.com/app/recorda-diario-y-recordatorio/id1509030899">Recorda</a>.
-            I mainly do iOS, backend and system administration.</p>
+            <p>
+              <ul>
+                <li>
+                  Develop and publish iOS apps from zero to App Store. Some of our projects:
+                  <ul>
+                    <li><a href="https://amigoinvisible22.com/en">Secret Santa 22</a>. More than 1.7M downloads. Reaches top charts each year during winter season.</li>
+                    <li><a href="https://recorda.app">Recorda</a>. More than 6K downloads</li>
+                    <li><a href="https://apps.apple.com/app/stickery-stiker-maker/id597385763" rel=”nofollow”>Stickery</a>. (Sold in 2021). We had more than 1.5M downloads at the moment we sold.</li>
+                  </ul>
+                </li>
+                <li>Develop complex backends in Ruby on Rails both for apps and webs. Developed warehouse management platform <a href="http://alma100.com">alma100.com</a> used in Mercabarna.</li>
+                <li>Management of all the servers and systems we have in place such as devops operations, backend/data backups, database maintenance, etc.</li>
+              </ul>
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">March 2017 - Present</span>
@@ -197,7 +207,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a onclick="trackGAClick('stickery');" href="https://stickery.app">Stickery - the sticker maker</a> <span class="subheading text-secondary">(SOLD)</span></h3>
+            <h3 class="mb-0"><a onclick="trackGAClick('stickery');" href="https://apps.apple.com/app/stickery-stiker-maker/id597385763" rel=”nofollow”>Stickery - the sticker maker</a> <span class="subheading text-secondary">(SOLD)</span></h3>
             <p>Stickery is a sticker maker app that lets you create and customize your own stickers. You are able to share the stickers you created with your friends. You can also download really cool stickers from artists.</p>
           </div>
           <div class="resume-date text-md-right">
@@ -257,25 +267,22 @@
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
-            <i class="fab fa-swift"></i>
+            <i class="fab fa-swift" title="Swift"></i>
           </li>
           <li class="list-inline-item">
-            <i class="far fa-gem"></i>
+            <i class="far fa-gem" title="Ruby"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-docker"></i>
+            <i class="fab fa-docker" title="Docker"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-phoenix-framework"></i>
+            <i class="fab fa-phoenix-framework" title="Phoenix Framework"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-aws"></i>
+            <i class="fab fa-aws" title="Amazon Web Services"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-git-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fas fa-ellipsis-h"></i>
+            <i class="fab fa-git-square" title="Git"></i>
           </li>
         </ul>
 
@@ -283,16 +290,30 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            iOS development Swift/SwiftUI & Objective-C</li>
+            iOS Development
+            <ul>
+              <li>Swift & Objective-C</li>
+              <li>SwiftUI & UIKit</li>
+              <li>Combine & Core Data</li>
+            </ul>
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Backend development Ruby On Rails and Phoenix Framework</li>
+            Backend Development
+            <ul>
+              <li>Ruby & Ruby on Rails</li>
+              <li>Elixir & Phoenix Framework</li>
+              <li>Docker, Sidekiq, AWS</li>
+            </ul>
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            DevOps using Docker, AWS, CI/CD, etc</li>
+            DevOps using Bitrise, Docker and AWS
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            System administration (Linux, DB, etc)</li>
+            System administration using Linux, PotgreSQL and Nginx
+          </li>
         </ul>
       </div>
     </section>
