--- a/index.html
+++ b/index.html
@@ -107,6 +107,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Senior iOS Engineer</h3>
+            <div class="subheading mb-3">Proton</div>
+            <p>
+              <ul>
+              <li>
+                Working in the Account team delivering shared features for all of the client apps.
+              </li>
+              </ul>
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2024 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">iOS Engineer</h3>
             <div class="subheading mb-3">Sage</div>
             <p>
@@ -119,7 +136,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">May 2021 - Present</span>
+            <span class="text-primary">May 2021 - December 2023</span>
           </div>
         </div>
 
@@ -201,7 +218,7 @@
             <p>Secret Santa 22 is an online gift exchange generator app that lets you draw names fast and free.</p>
           </div>
           <div class="resume-date text-md-right">
-            <img class="appstore-icon" src="https://is3-ssl.mzstatic.com/image/thumb/Purple114/v4/9a/1e/ad/9a1ead8e-6ff0-957b-13d3-b247502e06a1/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/230x0w.png" />
+            <img class="appstore-icon" src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/d1/c9/10/d1c91041-889e-d090-156f-a4da23b01cc5/AppIcon-0-0-1x_U007ephone-0-0-85-220.jpeg/230x0w.png" />
           </div>
         </div>
 
