--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
         <h1 class="mb-0">Alex
           <span class="text-primary">Morral</span>
         </h1>
-        <div class="subheading mb-5">iOS and Backend Developer ·
-          <a href="mailto:alexmorral@gmail.com">alexmorral@gmail.com</a>
+        <div class="subheading mb-5">Software Engineer · <span class="text-primary">alexmorral(@)gmail.com</span>
         </div>
         <div class="social-icons">
           <a onclick="trackGAClick('linkedin');" href="//www.linkedin.com/in/alexmorral/">
